<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/bg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/background_of_widget"
        android:textColor="#000"
        android:textSize="18sp"></TextView>

    <RadioGroup
        android:id="@+id/bg_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/bg_radio_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transparent"
            android:checked="true">
        </RadioButton>

        <RadioButton
            android:id="@+id/bg_radio_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black"
            android:checked="false" />

        <RadioButton
            android:id="@+id/bg_radio_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:id="@+id/fg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/text_of_widget"
        android:textColor="#000"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/fg_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/fg_radio_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/black" />

        <RadioButton
            android:id="@+id/fg_radio_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/save">
    </Button>
</LinearLayout>